--- a/index.html
+++ b/index.html
@@ -92,6 +92,23 @@
   justify-items: center;
   margin-bottom: 20vh;
 }
+@media (max-width: 600px) {
+  .logo-layout {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2列にする */
+    gap: 16px;
+    justify-content: center;
+    margin: 0 auto;
+        margin-bottom: 5vh;
+    padding: 20px;
+  }
+
+  .animal-logo {
+    width: 100px;
+    height: auto;
+  }
+}
+
 
 
     .animal-logo {
@@ -116,7 +133,7 @@
 
       .logo-layout {
         gap: 15px;
-        margin-bottom: 300vh;
+        margin-bottom: 15vh;
       }
     }
   　.animal-logo.dimmed {
@@ -135,6 +152,9 @@
 .shake {
   animation: shake 0.6s ease infinite;
 }
+
+ここから多分下のところの文章
+うおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおお
 .info-links {
   padding: 40px 20px;
   text-align: left;
@@ -144,7 +164,7 @@
 }
 
 .info-links h2 {
-  font-size: 60px;
+  font-size: 40px;
   color: #1a0e39;
   margin-bottom: 20px;
 }
@@ -168,7 +188,7 @@
   text-decoration: underline;
 }
 
-ここからどの動物にする？のところ
+ここからどの動物にする？のところ　俺を選びなよ　ああああああああああああああああああああああああああああああああああああああああ
 .tips-section {
   background: transparent;
   padding: 40px 20px;
@@ -240,27 +260,27 @@
   </p>
 
   <div class="animal-tip">
-    <h3>フクロウ：考えごとで眠れない夜もある♩</h3>
+    <h3>フクロウ：考え事で眠れない夜に♩</h3>
     <p>静かな夜、頭の中が忙しいあなたに　落ち着いた音で、心のノイズを静かに。</p>
   </div>
 
   <div class="animal-tip">
-    <h3>羊：やさしく眠気を誘いたいときもある♩</h3>
+    <h3>羊：やさしく眠気を誘いたい時に♩</h3>
     <p>ふわふわと夢の中へ。定番の羊でリラックス。死の儀式にぴったり</p>
   </div>
 
   <div class="animal-tip">
-    <h3>カエル：雨音に包まれて沈みたい時もある♩</h3>
+    <h3>カエル：雨音に包まれて沈みたい時に♩</h3>
     <p>外の世界をシャットアウトしたい夜。雨のリズムに合わせて心をととのえる</p>
   </div>
 
   <div class="animal-tip">
-    <h3>キビタキ：朝が不安で眠れないときもある♩</h3>
+    <h3>キビタキ：朝が不安で眠れない時に♩</h3>
     <p>明るい明日を信じたくなる音。自然のやさしさが背中をそっと押してくれる</p>
   </div>
 
   <div class="animal-tip">
-    <h3>イルカ：疲れた身体をまるごと包みたいときもある♩</h3>
+    <h3>イルカ：疲れた身体をまるごと包みたい時に♩</h3>
     <p>海の中に浮かんでいるような安心感。1日頑張ったら、浮いてみよう♩</p>
   </div>
 
